[Mac] REGRESSION: Scroll snap points broken after r180018 https://bugs.webkit.org/show_bug.cgi?id=141821 <rdar://problem/19898333>

Reviewed by Simon Fraser.

* page/EventHandler.cpp:
(WebCore::EventHandler::platformNotifySnapIfNecessary): Added stub.
(WebCore::EventHandler::handleWheelEvent): Call new 'platformNotifySnapIfNecessary' method
to catch the 'ended wheel' gesture.
* page/EventHandler.h:
* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::platformNotifySnapIfNecessary): Added. If the wheel event signifies
the end of a wheel/swipe gesture, let the snap logic decide if it should do anything
(i.e., trigger an animation)
* platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::processWheelEventForScrollSnap): Added.
* platform/ScrollAnimator.h:


Canonical link: https://commits.webkit.org/159864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180426 268f45cc-cd09-0410-ab3c-d52691b4dbfc