Source/WebCore/page/mac/EventHandlerMac.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008, 2009, 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2006, 2007, 2008, 2009, 2014-2015 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -47,6 +47,7 @@
 #include "RenderListBox.h"
 #include "RenderWidget.h"
 #include "RuntimeApplicationChecks.h"
+#include "ScrollAnimator.h"
 #include "ScrollLatchingState.h"
 #include "ScrollableArea.h"
 #include "Scrollbar.h"
@@ -978,5 +979,17 @@ bool EventHandler::platformCompletePlatformWidgetWheelEvent(const PlatformWheelE
 
     return false;
 }
-    
+
+#if ENABLE(CSS_SCROLL_SNAP)
+void EventHandler::platformNotifySnapIfNecessary(const PlatformWheelEvent& wheelEvent, ScrollableArea& scrollableArea)
+{
+    // Special case handling for ending wheel gesture to activate snap animation:
+    if (wheelEvent.phase() != PlatformWheelEventPhaseEnded && wheelEvent.momentumPhase() != PlatformWheelEventPhaseEnded)
+        return;
+
+    if (ScrollAnimator* scrollAnimator = scrollableArea.existingScrollAnimator())
+        scrollAnimator->processWheelEventForScrollSnap(wheelEvent);
+}
+#endif
+
 }
